[gd_scene load_steps=14 format=3 uid="uid://ck7b41o7rjpc1"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_p76vr"]
[ext_resource type="AudioStream" uid="uid://11lhojkyud17" path="res://Audio/shorter_steps_pixabay.mp3" id="2_14cxe"]
[ext_resource type="AudioStream" uid="uid://bw0m7vdks74f8" path="res://Audio/computer-on-off.mp3" id="3_1evnv"]
[ext_resource type="AudioStream" uid="uid://b6yxm45fsuxea" path="res://Audio/achievement-universfield.mp3" id="4_i5210"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7tkwv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mpsml"]
bg_color = Color(0.0784314, 0.701961, 0.164706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1000x"]

[sub_resource type="Animation" id="Animation_lhi34"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_c70eh"]
resource_name = "cpu_fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1c3hc"]
resource_name = "cpu_fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_708o6"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_x16ua"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ge88"]
_data = {
"RESET": SubResource("Animation_lhi34"),
"cpu_fade_in": SubResource("Animation_c70eh"),
"cpu_fade_out": SubResource("Animation_1c3hc"),
"fade_in": SubResource("Animation_708o6"),
"fade_out": SubResource("Animation_x16ua")
}

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_p76vr")

[node name="ClockTimer" type="Timer" parent="."]

[node name="Panel" type="Panel" parent="."]
offset_left = 1827.0
offset_right = 1921.0
offset_bottom = 134.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -92.0
offset_bottom = 131.0
grow_horizontal = 0

[node name="ClockLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "8:00 AM"
horizontal_alignment = 1

[node name="DayLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sunday"
horizontal_alignment = 1

[node name="DateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "09/02/2007"
horizontal_alignment = 1

[node name="LocationLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Lobby"
horizontal_alignment = 1

[node name="MoneyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "$0.00"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
offset_left = 92.0
offset_top = 985.0
offset_right = 536.0
offset_bottom = 1074.0
alignment = 1

[node name="HungerBar" type="ProgressBar" parent="VBoxContainer2"]
visible = false
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_7tkwv")

[node name="SleepBar" type="ProgressBar" parent="VBoxContainer2"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_mpsml")

[node name="GradesBar" type="ProgressBar" parent="VBoxContainer2"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_1000x")

[node name="CarryWeightLabel" type="Label" parent="."]
offset_left = 97.0
offset_top = 955.0
offset_right = 170.0
offset_bottom = 978.0

[node name="NotificationsContainer" type="VBoxContainer" parent="."]
offset_left = 9.0
offset_top = 2.0
offset_right = 362.0
offset_bottom = 2.0

[node name="ScreenFade" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FadeAnimation" type="AnimationPlayer" parent="ScreenFade"]
libraries = {
"": SubResource("AnimationLibrary_6ge88")
}

[node name="StairsAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_14cxe")
volume_db = 6.0

[node name="ComputerAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1evnv")
volume_db = 2.0

[node name="AchievementAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_i5210")
volume_db = -2.0

[node name="TestButton1" type="Button" parent="."]
process_mode = 3
visible = false
offset_right = 8.0
offset_bottom = 8.0
text = "Skip 12 hours"

[connection signal="timeout" from="ClockTimer" to="." method="_on_clock_timer_timeout"]
[connection signal="value_changed" from="VBoxContainer2/HungerBar" to="." method="_on_hunger_bar_value_changed"]
[connection signal="value_changed" from="VBoxContainer2/SleepBar" to="." method="_on_sleep_bar_value_changed"]
[connection signal="value_changed" from="VBoxContainer2/GradesBar" to="." method="_on_grades_bar_value_changed"]
[connection signal="pressed" from="TestButton1" to="." method="_on_test_button_1_pressed"]
